refactor: altera retorno de recuperarZip para Optional<byte[]>, eliminando gerenciamento de InputStream